# hot-links

./: .gitignore  Makefile  README.md  README_tmp.html  pyproject.toml  requirements.txt  test.ipynb
data/: make_data.py
data/raw/: gurdian_articles_sample.csv
docs/: mkdocs.yml
docs/docs/: index.md
hot_links/: 04_evals.ipynb  __init__.py  config.py  dataset.py  eval_utils.py  features.py  plots.py  vector_db_utils.py
hot_links/modeling/: predict.py  train.py
notebooks/: 01_grab_data.ipynb  02_make_vector_store.ipynb  03_query_vector_store.ipynb  04_evals.ipynb  05_evals.ipynb  06_fine_tuning.ipynb  grab_data.ipynb  sqllite_test.ipynb  test.ipynb  tutorial.db
tests/: test_data.py
