[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hot_links"
version = "0.0.1"
description = "Python project evaluating LLMs for document hyperlinks"
authors = [
  { name = "Alex R" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.11"


[tool.ruff]
line-length = 99
src = ["hot_links"]
include = ["pyproject.toml", "hot_links/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["hot_links"]
force-sort-within-sections = true

